refactor: cleanup