@@ -4,28 +4,26 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Finds all permutations of 1...n of length k
- * @author TheClerici (<a href="https://github.com/TheClerici">git-TheClerici</a>)
+ * Finds all combinations of 0...n-1 of length k
  */
 public final class ArrayCombination {
     private ArrayCombination() {
     }
 
     /**
-     * Find all combinations of 1..n using backtracking.
+     * Finds all combinations of length k of 0..n-1 using backtracking.
      *
-     * @param n Max value of the elements.
+     * @param n Number of the elements.
      * @param k Length of the combination.
      * @return A list of all combinations of length k.
-     *         Returns an empty list if k is 0 or n is less than k.
      */
     public static List<List<Integer>> combination(int n, int k) {
-        if (k <= 0 || n < k) {
-            return new ArrayList<>(); // Return empty list for invalid input
+        if (n < 0 || k < 0 || k > n) {
+            throw new IllegalArgumentException("Wrong input.");
         }
 
         List<List<Integer>> combinations = new ArrayList<>();
-        combine(combinations, new ArrayList<>(), 1, n, k);
+        combine(combinations, new ArrayList<>(), 0, n, k);
         return combinations;
     }
 
@@ -35,10 +33,10 @@ public final class ArrayCombination {
             return;
         }
 
-        for (int i = start; i <= n; i++) {
+        for (int i = start; i < n; i++) {
             current.add(i);
-            combine(combinations, current, i + 1, n, k); // Recursive call
-            current.remove(current.size() - 1); // Backtrack
+            combine(combinations, current, i + 1, n, k);
+            current.removeLast(); // Backtrack
         }
     }
 }
